export interface Comment {
    id: string;
    content: string;
    user: string; // User ID
    game: string; // Game ID
    createdAt: string;
}