@startuml gamedev

hide circle
skinparam Linetype ortho
skinparam Ranksep 60
skinparam Nodesep 100

entity Comment {
    * id: <<uuid>>
    ---
    * gameId: <<FK>>
    * commenterId: <<FK>>
    * createdAt: timestamp
    * content: string
}

entity Developer {
    * id: <<uuid>>
    ---
    * name: string
    * avatar: URL
    * description: string
}

entity Game {
    * id: <<uuid>>
    ---
    * name: string
    * description: string
    * releaseDate: timestamp
    * cover: URL
    * photos: URL[]
    * videos: URL[]
}

entity Genre {
    * id: <<uuid>>
    ---
    * type: GenreType
    * description: string
}

entity Review {
    * id: <<uuid>>
    ---
    * gameId: <<FK>>
    * userId: <<FK>>
    * title: string
    * text: string
    * createdAt: timestamp
    * rating: int
}

entity User {
    * id: <<uuid>>
    ---
    * userName: string
    * email: string
    * createdAt: timestamp
    * hashedPassword: string
    * salt: string
    * avatar: URL
    * wishList: Game[]
}

entity GameDevelopment {
    * id: <<uuid>>
    ---
    * gameId: <<FK>>
    * developerId: <<FK>>
}

entity GameGenre {
    * id: <<uuid>>
    ---
    * gameId: <<FK>>
    * genreId: <<FK>>
}

Developer||..o{GameDevelopment
Game||..o{GameDevelopment
Game||..o{GameGenre
Genre||..o{GameGenre
Review}o..||Game
User||..o{Review
Comment}o..||Game
User||..o{Comment


@enduml